# Precision-Driven-RAG

./: .env  ChromaDB.ipynb  LICENSE  Metadata_Studio.ipynb  Precision-Driven-RAG.md  RAG.ipynb  README.md  Raptor_chunks.ipynb  Semantic_chunks.ipynb  pyproject.toml
raptor_db/: chroma.sqlite3
semantic_db/: chroma.sqlite3
