[tool.poetry]
name = "RAG"
version = "1.0.0"
description = "Advanced RAG pipeline"
authors = ["Federico Palma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.51"
langchain = "^0.2.6"
chromadb = "^0.5.3"
langchain-openai = "^0.1.13"
llama-index-packs-raptor = "^0.1.3"
langchain-chroma = "^0.1.2"
llama-index-vector-stores-chroma = "^0.1.10"
jupyterlab-widgets = "^3.0.11"
langchain-community = "^0.2.6"
ipywidgets = "^8.1.3"
langchain-experimental = "^0.0.62"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
